assets/eks/genai/mistral.yaml
# ##
# ## https://github.com/awslabs/mountpoint-s3-csi-driver/tree/main/examples/kubernetes/static_provisioning
# ---
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: s3-pv
# spec:
#   capacity:
#     storage: 1200Gi # ignored, required
#   accessModes:
#     - ReadWriteMany # supported options: ReadWriteMany / ReadOnlyMany
#   mountOptions:
#     - uid=1000
#     - gid=2000
#     - allow-other
#     - allow-delete
#     - region us-west-2
#   csi:
#     driver: s3.csi.aws.com # required
#     volumeHandle: s3-csi-driver-volume
#     volumeAttributes:
#       bucketName: eht-eks-data
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: s3-claim
#   namespace: default
# spec:
#   accessModes:
#     - ReadWriteMany # supported options: ReadWriteMany / ReadOnlyMany
#   storageClassName: "" # required for static provisioning
#   resources:
#     requests:
#       storage: 1200Gi # ignored, required
#   volumeName: s3-pv
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mistral-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mistral-server
  template:
    metadata:
      labels:
        app: mistral-server
    spec:
      nodeSelector:
        karpenter.sh/nodepool: "inferentia"
      containers:
      - name: inference-server
        # image: ghcr.io/huggingface/text-generation-inference:2.0.3
        image:  public.ecr.aws/u3r1l1j7/eks-genai:mistral-inst-v0.3-7b-8k-2-1
        resources:
          requests:
            # cpu: "2"
            # memory: "7Gi"
            #ephemeral-storage: "20Gi"
            aws.amazon.com/neuron: 1
          limits:
            #cpu: "2"
              # memory: "7Gi"
              #ephemeral-storage: "20Gi"
            aws.amazon.com/neuron: 1
        args:             #https://huggingface.co/docs/text-generation-inference/en/basic_tutorials/launcher
        - --model-id=$(MODEL_ID)
        - --num-shard=1
        - --trust-remote-code
        - --max-total-tokens=8192
---
apiVersion: v1
kind: Service
metadata:
  name: mistral-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance
spec:
  selector:
    app: mistral-server
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
